[tool.poetry]
name = "skillbuilder"
version = "0.1.0"
description = "gotta keep those skills sharp"
authors = ["Joseph Kroon"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
